// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <NavSearch /> should renders correctly 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <StaticRouter
    basename=""
    context={Object {}}
    location="someLocation"
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "someLocation",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <NavSearch
        userAccount={
          Object {
            "role": "IDCR",
          }
        }
      >
        <div
          className="wrap-search wrap-header-search"
        >
          <div
            className="header-search"
          >
            <div
              className="control-group left control-search-select dropdown"
            >
              <div>
                <SearchContent
                  ADVANCED_SEARCH="advancedSearch"
                  BASIC_SEARCH="basicSearch"
                  SEARCH_CONTENT="searchContent"
                  onSelect={[Function]}
                  selected="basicSearch"
                >
                  <div
                    className="dropdown-menu dropdown-menu-search-select dropdown-menu-panel dropdown-menu-left dropdown-menu-small-size"
                  >
                    <div
                      className="heading"
                    >
                      Search Options
                    </div>
                    <div
                      className="dropdown-menu-wrap-list"
                    >
                      <div
                        className="dropdown-menu-list"
                      >
                        <div
                          className="dropdown-menu-item active"
                          onClick={[Function]}
                        >
                          <span
                            className="dropdown-menu-item-text"
                          >
                            Patient Search - Basic
                          </span>
                        </div>
                        <div
                          className="dropdown-menu-item"
                          onClick={[Function]}
                        >
                          <span
                            className="dropdown-menu-item-text"
                          >
                            Patient Search - Advanced
                          </span>
                        </div>
                        <div
                          className="dropdown-menu-item"
                        >
                          <span
                            className="dropdown-menu-item-text"
                          >
                            Clinical Query
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </SearchContent>
                <PTButton
                  className="btn btn-dropdown-toggle btn-search-toggle"
                  onClick={[Function]}
                >
                  <button
                    className="btn btn-dropdown-toggle btn-search-toggle"
                    onClick={[Function]}
                  >
                    <i
                      className="btn-icon fa fa-bars"
                    />
                  </button>
                </PTButton>
              </div>
            </div>
            <BasicPatientSearch>
              <div>
                <PTButton
                  className="btn btn-search"
                  onClick={[Function]}
                >
                  <button
                    className="btn btn-search"
                    onClick={[Function]}
                  >
                    <i
                      className="btn-icon fa fa-search"
                    />
                  </button>
                </PTButton>
                <div
                  className="wrap-search-holder"
                >
                  <div
                    className="search-holder"
                  >
                    <form
                      onSubmit={[Function]}
                    >
                      <input
                        className="form-control"
                        onChange={[Function]}
                        placeholder="Search"
                        type="text"
                        value=""
                      />
                    </form>
                  </div>
                </div>
              </div>
            </BasicPatientSearch>
          </div>
        </div>
      </NavSearch>
    </Router>
  </StaticRouter>
</Provider>
`;

exports[`Component <NavSearch /> should renders correctly 2`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <StaticRouter
    basename=""
    context={Object {}}
    location="someLocation"
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "createHref": [Function],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "listen": [Function],
          "location": Object {
            "hash": "",
            "pathname": "someLocation",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <NavSearch
        userAccount={
          Object {
            "role": "PHR",
          }
        }
      >
        <div
          className="wrap-search wrap-header-search"
        >
          <div
            className="header-search"
          >
            <div
              className="control-group left control-search-select dropdown open"
            >
              <PTButton
                className="btn btn-dropdown-toggle btn-search-toggle"
                onClick={[Function]}
              >
                <button
                  className="btn btn-dropdown-toggle btn-search-toggle"
                  onClick={[Function]}
                >
                  <i
                    className="btn-icon fa fa-bars"
                  />
                </button>
              </PTButton>
            </div>
            <BasicPatientSearch>
              <div>
                <PTButton
                  className="btn btn-search"
                  onClick={[Function]}
                >
                  <button
                    className="btn btn-search"
                    onClick={[Function]}
                  >
                    <i
                      className="btn-icon fa fa-search"
                    />
                  </button>
                </PTButton>
                <div
                  className="wrap-search-holder"
                >
                  <div
                    className="search-holder"
                  >
                    <form
                      onSubmit={[Function]}
                    >
                      <input
                        className="form-control"
                        onChange={[Function]}
                        placeholder="Search"
                        type="text"
                        value=""
                      />
                    </form>
                  </div>
                </div>
              </div>
            </BasicPatientSearch>
          </div>
        </div>
      </NavSearch>
    </Router>
  </StaticRouter>
</Provider>
`;

exports[`Component <NavSearch /> should renders correctly shallow 1`] = `
<div
  className="wrap-search wrap-header-search"
>
  <div
    className="header-search"
  >
    <div
      className="control-group left control-search-select dropdown"
    >
      <div>
        <SearchContent
          ADVANCED_SEARCH="advancedSearch"
          BASIC_SEARCH="basicSearch"
          SEARCH_CONTENT="searchContent"
          onSelect={[Function]}
          selected="advancedSearch"
        />
        <PTButton
          className="btn btn-dropdown-toggle btn-search-toggle"
          onClick={[Function]}
        >
          <i
            className="btn-icon fa fa-bars"
          />
        </PTButton>
      </div>
    </div>
    <Connect(AdvancedPatientSearch)
      className="advanced-search"
      onClose={[Function]}
    />
  </div>
</div>
`;
